# GameJamSpring2026

./: .gitignore  CMakeLists.txt  README.md  build_web.bat
AI_disclosure/: prompts.md
assets/music/: soundtrack_timestamps.txt
client/: CMakeLists.txt  beach_client.cpp
server/: CMakeLists.txt  beach_server.cpp
